--- a/main.css
+++ b/main.css
@@ -148,4 +148,9 @@ header{
 section{
     width:100%;
     height:980px;
+    outline: 1px dashed palevioletred;
+}
+
+#Design, #Project{
+    color:#fff;
 }
