--- a/main.css
+++ b/main.css
@@ -1,30 +1,15 @@
 header{
     display:flex;
     width:100%;
-    height:50px;
+    height:80px;
     position:fixed;
-    top:5%;
-    left:2%;
     z-index:9999;
-}
-
-header .ham{
-}
-
-header nav{
+    outline:1px solid red;
     color:#fff;
-    border:1px solid white;
-    width:120px;
-    height:200px;
 }
 
-header .ham_top,.ham_middle,.ham_bottom{
-    width:40px;
-    margin:5px 0;
-    height:5px;
-    background:darkgoldenrod;
-    box-sizing:border-box;
-
+header a{
+    color:#fff;
 }
 
 .here {
